[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedinscrape"
version = "0.1.0"
description = "LinkedIn profile scraper SDK — extract comprehensive profile data via the Voyager API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Muhammad Zaid" }]
keywords = ["linkedin", "scraper", "profile", "voyager", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "curl_cffi>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "mypy>=1.0"]

[project.scripts]
linkedinscrape = "linkedinscrape.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedinscrape"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/linkedinscrape/_endpoints.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
